syntax = "proto3";

import "google/protobuf/timestamp.proto";

package masters;

option go_package = "github.com/DKhorkov/hmtm-toys/api/protobuf/toys;toys";


service MastersService {
  rpc RegisterMaster(RegisterMasterIn) returns (RegisterMasterOut) {}
  rpc GetMaster(GetMasterIn) returns (GetMasterOut) {}
  rpc GetMasterByUser(GetMasterByUserIn) returns (GetMasterOut) {}
  rpc GetMasters(GetMastersIn) returns (GetMastersOut) {}
}

message RegisterMasterIn {
  string requestID = 1;
  uint64 userID = 2;
  string info = 3;
}

message RegisterMasterOut {
  uint64 masterID = 1;
}

message GetMasterIn {
  string requestID = 1;
  uint64 ID = 2;
}

message GetMastersIn {
  string requestID = 1;
}

message GetMasterOut {
  uint64 ID = 1;
  uint64 userID = 2;
  string info = 3;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
}

message GetMastersOut {
  repeated GetMasterOut masters = 1;
}

message GetMasterByUserIn {
  string requestID = 1;
  uint64 userID = 2;
}
