syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "toys/tags.proto";

package toys;

option go_package = "github.com/DKhorkov/hmtm-toys/api/protobuf/toys;toys";


service ToysService {
  rpc AddToy(AddToyRequest) returns (AddToyResponse) {}
  rpc GetToy(GetToyRequest) returns (GetToyResponse) {}
  rpc GetToys(GetToysRequest) returns (GetToysResponse) {}
  rpc GetMasterToys(GetMasterToysRequest) returns (GetToysResponse) {}
}

message AddToyRequest {
  string requestID = 1;
  string accessToken = 2;
  string name = 3;
  string description = 4;
  float price = 5;
  uint32 quantity = 6;
  uint32 categoryID = 7;
  repeated uint32 tagIDs = 8;
}

message AddToyResponse {
  uint64 toyID = 1;
}

message GetToyRequest {
  string requestID = 1;
  uint64 ID = 2;
}

message GetToysRequest {
  string requestID = 1;
}

message GetToyResponse {
  uint64 ID = 1;
  uint64 masterID = 2;
  string name = 3;
  string description = 4;
  float price = 5;
  uint32 quantity = 6;
  uint32 categoryID = 7;
  repeated tags.GetTagResponse tags = 8;
  google.protobuf.Timestamp createdAt = 9;
  google.protobuf.Timestamp updatedAt = 10;
}

message GetMasterToysRequest {
  string requestID = 1;
  uint64 masterID = 2;
}

message GetToysResponse {
  repeated GetToyResponse toys = 1;
}
